[gd_scene load_steps=6 format=3 uid="uid://b8les3u6x8r6a"]

[ext_resource type="Script" path="res://code/game/minigame/travel/travel.gd" id="1_c334i"]
[ext_resource type="PackedScene" uid="uid://b5xboqyyh4pu4" path="res://code/game/celestials/nonliving/space_object1.tscn" id="2_fj1ny"]
[ext_resource type="PackedScene" uid="uid://co7xp5pdrfa75" path="res://code/game/celestials/nonliving/space_object2.tscn" id="3_441sf"]
[ext_resource type="PackedScene" uid="uid://qxofsnnypkp3" path="res://code/game/celestials/player/player_travel.tscn" id="3_vivk2"]
[ext_resource type="EventAsset" uid="uid://dtnc0dr6ellxq" path="res://addons/FMOD/editor/resources/events/{293b26c7-0c3b-46b5-9156-0e17046225e0}.tres" id="5_x7dfi"]

[node name="Travel" type="Node2D"]
script = ExtResource("1_c334i")
space_objects_tscn = Array[PackedScene]([ExtResource("2_fj1ny"), ExtResource("3_441sf")])

[node name="NonlivingSpawn" type="Node2D" parent="."]
position = Vector2(800, 180)

[node name="SpawnTimer" type="Timer" parent="NonlivingSpawn"]
wait_time = 0.1

[node name="Player" parent="." instance=ExtResource("3_vivk2")]
position = Vector2(120, 180)

[node name="VisibleOnScreenNotifier2D2" type="VisibleOnScreenNotifier2D" parent="Player"]
scale = Vector2(3.7, 3.5)

[node name="PlayerBoing" type="StudioEventEmitter2D" parent="Player"]
stop_event = 3
event = ExtResource("5_x7dfi")

[node name="GameTime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
text = "Distance remaining: 0"

[connection signal="timeout" from="NonlivingSpawn/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="screen_exited" from="Player/VisibleOnScreenNotifier2D2" to="." method="_on_visible_on_screen_notifier_2d_2_screen_exited"]
[connection signal="timeout" from="GameTime" to="." method="_on_game_time_timeout"]
